k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
            # Database Volume claim see yml file 
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432 
          volumeMounts:
            - name: postgres-storage       
              mountPath: /var/lib/postgres/data
              subPath: postgres  
          # Volume mountPath is actual data path inside container and SubPath is Path inside Hardrive
