k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: "/?(.*)"
            pathType: Prefix
            backend:
              service:
                # Service to Client IP
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: "/api/?(.*)"
            pathType: Prefix
            backend:
              service:
                # Service to Server IP
                name: server-cluster-ip-service
                port:
                  number: 5000
